--- a/html/recstudio-ro/css/custom.css
+++ b/html/recstudio-ro/css/custom.css
@@ -1,53 +1,63 @@
 @import "https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700&amp;subset=cyrillic";
 body {
-  margin: 0;
-  padding: 0;
-  font-family: "Yanone Kaffeesatz", sans-serif;
-  font-size: 18px;
+    margin: 0;
+    padding: 0;
+    font-family: "Yanone Kaffeesatz", sans-serif;
+    font-size: 18px;
 }
+
 ul {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
 }
+
 .container {
-  margin: 0 auto;
-  max-width: 1360px;
+    margin: 0 auto;
+    max-width: 1360px;
 }
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
 }
+
 a {
-  text-decoration: none;
-  color: #333;
+    text-decoration: none;
+    color: #333;
+    transition: all ease 0.4s;
 }
+
 a:hover {
-  color: #ff3a47;
+    color: #ff3a47;
+    transition: all ease 0.4s;
 }
+
 .main-title {
-  font-size: 55px;
-  line-height: 1em;
-  font-weight: 700;
-  color: #414141;
-  position: relative;
-  display: inline-block;
+    font-size: 55px;
+    line-height: 1em; 
+    font-weight: 700;
+    color: #414141;
+    position: relative;
+    display: inline-block;
 }
+
 .main-title:after {
-  content: " ";
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background: #ff3a47;
-  position: absolute;
-  display: block;
-  top: 35px;
-  right: -15px;
+    content: " ";
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: #ff3a47;
+    position: absolute;
+    display: block;
+    top: 35px;
+    right: -15px;
 }
+
 p {
-  line-height: 28px;
+    line-height: 28px;
 }
