--- a/html/recstudio-ro/css/main.css
+++ b/html/recstudio-ro/css/main.css
@@ -12,6 +12,7 @@ ul {
 }
 .container {
   margin: 0 auto;
+  padding: 0 15px;
   max-width: 1200px;
 }
 h1,
@@ -30,9 +31,19 @@ h4 {
 a {
   text-decoration: none;
   color: #444444;
+  transition: all ease 0.4s;
 }
 a:hover {
   color: #ff3a47;
+  transition: all ease 0.4s;
+}
+@media (max-width: 480px) {
+  .text-block {
+    text-align: center;
+  }
+  .text-block br {
+    display: none;
+  }
 }
 .main-title {
   font-size: 55px;
@@ -41,6 +52,11 @@ a:hover {
   color: #414141;
   position: relative;
   display: inline-block;
+}
+@media (max-width: 480px) {
+  .main-title {
+    font-size: 40px;
+  }
 }
 .main-title:after {
   content: " ";
@@ -53,87 +69,277 @@ a:hover {
   top: 35px;
   right: -15px;
 }
+@media (max-width: 480px) {
+  .main-title:after {
+    top: 24px;
+  }
+}
 p {
   line-height: 28px;
 }
-#menu-wrapper {
-  background: rgba(0, 0, 0, 0.2);
+.menu-wrapper {
+  background: transparent;
+  width: 100%;
+  min-height: 50px;
+  margin: auto;
   position: fixed;
-  height: 60px;
-  width: 70%;
-  display: block;
-  margin: 0 auto;
-  text-align: center;
-  left: 0;
-  right: 0;
-  top: 30px;
-  z-index: 3;
+  padding: 50px 0;
+  z-index: 999;
+  transition: all ease 0.5s;
 }
-#menu-wrapper .container #menu {
+@media (max-width: 1440px) {
+  .menu-wrapper {
+    width: 100%;
+  }
+}
+@media (max-width: 767px) {
+  .menu-wrapper {
+    padding: 0;
+    min-height: 65px;
+  }
+}
+.menu-wrapper .container .logotype {
+  display: none;
+}
+@media (max-width: 767px) {
+  .menu-wrapper .container .logotype {
+    display: block;
+  }
+}
+.menu-wrapper .container .logotype img.logo {
+  width: 120px;
+  padding-top: 11px;
+}
+.menu-wrapper .container #menu-btn {
+  position: absolute;
+  right: 15px;
+  top: 30px;
+  background: transparent;
+  border: none;
+  outline: none;
+  outline-offset: 0;
+  transition-duration: 0.2s;
+  cursor: pointer;
+}
+@media (max-width: 767px) {
+  .menu-wrapper .container #menu-btn {
+    top: 15px;
+  }
+}
+.menu-wrapper .container #menu-btn span.op {
+  width: 30px;
+  height: 4px;
+  background: #fff;
+  display: block;
+  margin: 5px;
+}
+.menu-wrapper .container #menu-btn span.cl-1,
+.menu-wrapper .container #menu-btn span.cl-2 {
+  width: 30px;
+  height: 4px;
+  background: #fff;
+  display: none;
+  margin: 5px;
+}
+@media (min-width: 767px) {
+  .menu-wrapper .container #menu-btn {
+    display: block;
+  }
+}
+@media (min-width: 768px) {
+  .menu-wrapper .container #menu-btn {
+    display: none;
+  }
+}
+.menu-wrapper .container #menu-btn.open span.op {
+  display: none;
+}
+.menu-wrapper .container #menu-btn.open span.cl-1 {
+  display: block;
+  transform: rotate(45deg);
+  transition: all ease 0.5s;
+  position: relative;
+  top: 9px;
+  right: 0px;
+}
+.menu-wrapper .container #menu-btn.open span.cl-2 {
+  display: block;
+  transform: rotate(-45deg);
+  transition: all ease 0.5s;
+  position: relative;
+  top: 0;
+  right: 0;
+}
+.menu-wrapper .container #menu-btn:focus,
+.menu-wrapper .container #menu-btn:hover {
+  background: transparent;
+  outline: none;
+  outline-offset: 0;
+}
+.menu-wrapper .container nav.dropdown {
+  background: #1f1f1f;
+  width: 100%;
+  margin: 0;
+  position: absolute;
+  margin: -15px;
+  z-index: -1;
+}
+@media (min-width: 768px) {
+  .menu-wrapper .container nav.dropdown {
+    background: transparent;
+    position: relative;
+    width: auto;
+    margin: 0;
+    z-index: 0;
+  }
+}
+.menu-wrapper .container nav.dropdown #menu {
   display: flex;
-  list-style: none;
   justify-content: center;
   align-items: center;
+  margin: auto;
+  width: 90%;
+  transition: all ease 0.4s;
 }
-#menu-wrapper .container #menu li {
-  padding: 10px 30px;
+@media (max-width: 767px) {
+  .menu-wrapper .container nav.dropdown #menu {
+    display: none;
+  }
 }
-#menu-wrapper .container #menu li a {
-  color: #ffffff;
+@media (min-width: 768px) {
+  .menu-wrapper .container nav.dropdown #menu {
+    display: block;
+  }
+}
+@media (min-width: 769px) {
+  .menu-wrapper .container nav.dropdown #menu {
+    display: flex;
+  }
+}
+.menu-wrapper .container nav.dropdown #menu li {
+  padding: 0 30px;
+  list-style-type: none;
+  line-height: 30px;
+  margin: 0;
+  transition: all ease 0.4s;
+}
+@media (max-width: 1200px) {
+  .menu-wrapper .container nav.dropdown #menu li {
+    padding: 0 20px;
+  }
+}
+@media (max-width: 992px) {
+  .menu-wrapper .container nav.dropdown #menu li {
+    padding-left: 10px;
+  }
+}
+.menu-wrapper .container nav.dropdown #menu li a {
   text-decoration: none;
-  font-size: 18px;
-  text-transform: normal;
+  letter-spacing: 0.5px;
+  color: #fff;
+  font-weight: 200;
 }
-#menu-wrapper .container #menu li a:hover {
+@media (max-width: 767px) {
+  .menu-wrapper .container nav.dropdown #menu li a {
+    font-size: 33px;
+  }
+}
+.menu-wrapper .container nav.dropdown #menu li a:hover {
   color: #ff3a47;
 }
-#menu-wrapper .container #menu li .logo-center {
+.menu-wrapper .container nav.dropdown #menu li::after {
+  content: " ";
+  width: 20px;
+  height: 1px;
+  display: inline-block;
+  color: #ffffff57;
+  position: relative;
+  background: #ffffff;
+  top: -4px;
+  left: 25px;
+  transition: all ease 0.4s;
+}
+@media (max-width: 1023px) {
+  .menu-wrapper .container nav.dropdown #menu li::after {
+    display: none;
+  }
+}
+@media (max-width: 767px) {
+  .menu-wrapper .container nav.dropdown #menu.open {
+    display: block;
+    margin: 35% auto 0;
+    text-align: center;
+    height: 100vh;
+  }
+  .menu-wrapper .container nav.dropdown #menu.open li {
+    padding: 5px 0;
+  }
+}
+@media (max-width: 767px) and (max-width: 767px) {
+  .menu-wrapper .container nav.dropdown #menu.open {
+    margin: 25% auto 0;
+  }
+}
+@media (max-width: 767px) and (max-width: 767px) {
+  .menu-wrapper .container nav.dropdown #menu.open li {
+    padding: 0;
+    line-height: 40px;
+  }
+}
+.menu-wrapper .container nav.dropdown #menu img.logo {
   width: 120px;
-  margin: auto;
+  margin: 10px 0 0;
 }
-#menu-wrapper .container #menu li.main:after {
-  content: " ";
-  background: #404040;
-  width: 15px;
-  height: 1px;
-  display: block;
-  right: -70px;
-  position: relative;
-  top: -11px;
+@media (max-width: 767px) {
+  .menu-wrapper .container nav.dropdown #menu img.logo {
+    display: none;
+  }
 }
-#menu-wrapper .container #menu li.about:after {
-  content: " ";
-  background: #404040;
-  width: 15px;
-  height: 1px;
-  display: block;
-  right: -53px;
-  position: relative;
-  top: -11px;
+@media (max-width: 767px) {
+  .menu-wrapper .container nav.dropdown #menu li.no-line {
+    padding: 0;
+  }
 }
-#menu-wrapper .container #menu li.photo:after {
+.menu-wrapper .container nav.dropdown #menu li.no-line::after {
   content: " ";
-  background: #404040;
-  width: 15px;
-  height: 1px;
-  display: block;
-  right: -53px;
-  position: relative;
-  top: -11px;
+  display: none;
 }
-#menu-wrapper .container #menu li.video:after {
+.menu-wrapper.fixed {
+  background: #1f1f1f;
+  padding: 5px 0;
+  width: 100%;
+  transition: all ease 0.4s;
+}
+@media (max-width: 767px) {
+  .menu-wrapper.fixed {
+    padding: 0;
+  }
+}
+.menu-wrapper.fixed #menu {
+  background: transparent !important;
+  height: 50px;
+  transition: all ease 0.4s;
+}
+.menu-wrapper.fixed #menu li.no-line::after {
   content: " ";
-  background: #404040;
-  width: 15px;
-  height: 1px;
+  display: none;
+}
+.slideshow-pattern {
+  background: url("/images/slideshow/video/pattern_260.png") repeat;
+  position: absolute;
+  z-index: 999999 !important;
   display: block;
-  right: -57px;
-  position: relative;
-  top: -11px;
+  width: 100%;
+  height: 100%;
 }
 #about {
   background: url("/images/about-bg.jpg") no-repeat top center;
   min-height: 903px;
+}
+@media (max-width: 992px) {
+  #about {
+    background-position: top left -400px;
+  }
 }
 #about .container {
   display: flex;
@@ -142,6 +348,11 @@ p {
   justify-content: right;
   position: relative;
 }
+@media (max-width: 767px) {
+  #about .container {
+    min-height: 230px;
+  }
+}
 #about .container .text-block {
   position: absolute;
   right: 0;
@@ -149,6 +360,14 @@ p {
   left: auto;
   bottom: 0;
   width: 40%;
+}
+@media (max-width: 767px) {
+  #about .container .text-block {
+    position: relative;
+    width: 100%;
+    margin-top: 90px;
+    padding: 0 15px;
+  }
 }
 #about .container .text-block .main-title {
   font-size: 55px;
@@ -170,6 +389,11 @@ p {
   display: block;
   position: relative;
 }
+@media (max-width: 480px) {
+  #about .container .btn {
+    display: initial;
+  }
+}
 #about .container .btn:before {
   content: url(../images/arrow-btn.png);
   width: 20px;
@@ -186,6 +410,11 @@ p {
 #services {
   display: flex;
 }
+@media (max-width: 992px) {
+  #services {
+    flex-direction: column;
+  }
+}
 #services .column-1 {
   display: flex;
   flex-direction: row;
@@ -200,10 +429,27 @@ p {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  flex-basis: 39%;
-  min-height: 300px;
+  flex-basis: 36%;
+  min-height: 374px;
   text-align: center;
   padding: 40px;
+}
+@media (max-width: 1200px) {
+  #services .column-1 .service-box {
+    padding: 15px 40px;
+  }
+}
+@media (max-width: 767px) {
+  #services .column-1 .service-box {
+    flex-basis: 70%;
+  }
+}
+@media (max-width: 480px) {
+  #services .column-1 .service-box {
+    flex-basis: 100%;
+    padding: 15px 20px;
+    min-height: 280px;
+  }
 }
 #services .column-1 .box1 {
   border-bottom: 1px solid #eee;
@@ -212,8 +458,23 @@ p {
   border-left: 1px solid #eee;
   border-bottom: 1px solid #eee;
 }
+@media (max-width: 767px) {
+  #services .column-1 .box2 {
+    border-left: none;
+  }
+}
 #services .column-1 .box3 {
   border-right: 1px solid #eee;
+}
+@media (max-width: 767px) {
+  #services .column-1 .box3 {
+    border-right: none;
+  }
+}
+@media (max-width: 767px) {
+  #services .column-1 .box4 {
+    border-top: 1px solid #eee;
+  }
 }
 #services .column-1 h3 a {
   font-size: 24px;
@@ -237,6 +498,11 @@ p {
   flex: 1;
   flex-basis: 50%;
 }
+@media (max-width: 1200px) {
+  #services .column-2 {
+    flex-basis: 30%;
+  }
+}
 #services .column-2 .service-box {
   border: 4px solid #fff;
   width: 360px;
@@ -248,6 +514,12 @@ p {
   text-align: center;
   color: #fff;
   padding: 40px;
+}
+@media (max-width: 1200px) {
+  #services .column-2 .service-box {
+    width: 70%;
+    margin: 40px 0 0;
+  }
 }
 #services .column-2 .service-box .main-title {
   color: #fff;
@@ -263,6 +535,11 @@ p {
   text-align: right;
   color: #fff;
   position: relative;
+}
+@media (max-width: 1200px) {
+  #services .column-2 .btn-left-arrow {
+    width: auto;
+  }
 }
 #services .column-2 .btn-left-arrow:after {
   content: url(../images/icon-readmore-white.png);
@@ -283,9 +560,16 @@ p {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 45px 0;
+  padding: 45px 15px;
+}
+@media (max-width: 480px) {
+  #to-action .container {
+    flex-direction: column;
+    text-align: center;
+  }
 }
 #to-action .container .column-1 {
+  padding: 0px;
   flex-basis: 80%;
   flex: 1;
 }
@@ -309,12 +593,69 @@ p {
   color: #fff;
 }
 #video {
-  min-height: 400px;
+  min-height: 260px;
   text-align: center;
-  padding: 60px 0;
+  padding: 60px 0 0;
+  margin: auto;
 }
 #video p {
   line-height: 28px;
+}
+#video .slide-video .item {
+  background: url('https://thumbs.gfycat.com/SmoothScalyEmu-max-1mb.gif') no-repeat center center / contain;
+}
+@media (max-width: 767px) {
+  #video .slide-video .item {
+    width: 100%;
+  }
+}
+#video .customs-controls {
+  margin-bottom: 50px;
+  text-align: center;
+}
+#video .customs-controls button {
+  padding: 0;
+  position: relative;
+  background: transparent;
+  border: none;
+  outline: none;
+}
+#video .customs-controls button img.active {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition-duration: 0.5s;
+}
+#video .customs-controls .prev {
+  margin-right: 5px;
+}
+#video .customs-controls .prev:hover img.active {
+  opacity: 1;
+}
+#video .customs-controls .next {
+  border-radius: 90px;
+  transition-duration: 0.3s;
+}
+#video .customs-controls .next:hover img.active {
+  opacity: 1;
+}
+#video .bullets-wrap {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+#video .bullets-wrap .bullets {
+  width: 8px;
+  height: 8px;
+  background: #000;
+  margin: 0 2px;
+  text-align: center;
+  border-radius: 50%;
+  cursor: pointer;
+}
+#video .bullets-wrap .bullets.active {
+  background: #ff3a47;
 }
 #photo {
   min-height: 400px;
@@ -324,8 +665,49 @@ p {
 #photo p {
   line-height: 28px;
 }
+#photo .gallery-wrap {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+}
+#photo .gallery-wrap a {
+  margin: 5px;
+  flex-basis: 24%;
+}
+@media (max-width: 992px) {
+  #photo .gallery-wrap a {
+    flex-basis: 48%;
+  }
+}
+@media (max-width: 480px) {
+  #photo .gallery-wrap a {
+    flex-basis: 100%;
+    margin: 5px 15px;
+  }
+}
+#photo .gallery-wrap a img {
+  width: 100%;
+}
+#photo .gallery-wrap a img:hover {
+  box-shadow: 0 0 3px 3px #979797;
+}
 #team {
   padding-bottom: 100px;
+}
+@media (max-width: 1200px) {
+  #team {
+    padding-bottom: 50px;
+  }
+}
+#team .container .text-block {
+  width: 767px;
+}
+@media (max-width: 767px) {
+  #team .container .text-block {
+    width: auto;
+  }
 }
 #team .container .vert-divider {
   width: 1px;
@@ -336,16 +718,36 @@ p {
 }
 #team .container .team-block {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   min-height: 460px;
-  margin: 0 -20px;
+  margin: 20px -10px 0;
+}
+@media (max-width: 992px) {
+  #team .container .team-block {
+    flex-wrap: wrap;
+  }
+}
+@media (max-width: 480px) {
+  #team .container .team-block {
+    flex-direction: column;
+  }
 }
 #team .container .team-block .team-box {
   flex-basis: 25%;
 }
+@media (max-width: 992px) {
+  #team .container .team-block .team-box {
+    flex-basis: 50%;
+  }
+}
+@media (max-width: 480px) {
+  #team .container .team-block .team-box {
+    flex-basis: 100%;
+  }
+}
 #team .container .team-block .team-box .box {
-  margin: 20px;
+  margin: 10px;
   position: relative;
   transition: all ease 0.5s;
   cursor: pointer;
@@ -381,12 +783,22 @@ p {
   align-items: center;
   min-height: 500px;
 }
+@media (max-width: 992px) {
+  #reviews {
+    flex-direction: column;
+  }
+}
 #reviews .column-1 {
   width: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+@media (max-width: 992px) {
+  #reviews .column-1 {
+    width: 100%;
+  }
 }
 #reviews .column-1 .wrap-slide {
   position: relative;
@@ -410,33 +822,50 @@ p {
     text-align: center;
   }
 }
+@media (max-width: 480px) {
+  #reviews .column-1 .wrap-slide .item {
+    margin-bottom: 0;
+  }
+}
 #reviews .column-1 .wrap-slide .item .name-costumer span {
   color: #000000;
-  font-size: 20px;
+  font-size: 28px;
   font-weight: 700;
+  text-align: center;
+  display: block;
+  margin-top: 15px;
+  margin-bottom: 5px;
 }
-#reviews .column-1 .wrap-slide .item .name-costumer img {
-  margin-left: 50px;
+#reviews .column-1 .wrap-slide .item img {
+  margin: auto;
+  text-align: center;
+  border-radius: 50%;
+  width: 70px;
+  height: 70px;
+  display: block;
 }
 #reviews .column-1 .wrap-slide .item .data-costumer {
   color: #000000;
   font-size: 14px;
   font-weight: 400;
+  text-align: center;
+  display: block;
 }
 #reviews .column-1 .wrap-slide .item p {
   margin-top: 65px;
+  text-align: center;
+  padding: 0 15px;
 }
 #reviews .column-1 .wrap-slide .custom-controls {
   margin-bottom: 50px;
-}
-@media (max-width: 1200px) {
-  #reviews .column-1 .wrap-slide .custom-controls {
-    text-align: center;
-  }
+  text-align: center;
 }
 #reviews .column-1 .wrap-slide .custom-controls button {
   padding: 0;
   position: relative;
+  background: transparent;
+  border: none;
+  outline: none;
 }
 #reviews .column-1 .wrap-slide .custom-controls button img.active {
   position: absolute;
@@ -448,9 +877,6 @@ p {
 #reviews .column-1 .wrap-slide .custom-controls .prev {
   margin-right: 5px;
   transition-duration: 0.3s;
-}
-#reviews .column-1 .wrap-slide .custom-controls .prev img {
-  transform: rotate(180deg);
 }
 #reviews .column-1 .wrap-slide .custom-controls .prev:hover img.active {
   opacity: 1;
@@ -471,6 +897,15 @@ p {
   min-height: 500px;
   padding: 80px;
 }
+@media (max-width: 992px) {
+  #reviews .column-2 {
+    width: 100%;
+    padding: 0 0 25px;
+  }
+}
+#reviews .column-2 .text-block {
+  padding: 0 15px;
+}
 #partners {
   background: #f5f8fa;
   padding: 60px 0;
@@ -487,6 +922,9 @@ p {
   display: block;
   margin: 20px auto 0;
 }
+#fotter {
+  position: relative;
+}
 #fotter .container {
   display: flex;
   justify-content: space-between;
@@ -494,6 +932,13 @@ p {
   min-height: 180px;
   border-bottom: 1px solid;
   margin: 30px auto 0;
+}
+@media (max-width: 480px) {
+  #fotter .container {
+    flex-direction: column;
+    text-align: center;
+    padding-bottom: 30px;
+  }
 }
 #fotter .container .column-1 h4 {
   font-size: 24px;
@@ -507,6 +952,7 @@ p {
 }
 #fotter .container .column-2 h4 {
   text-align: right;
+  line-height: 40px;
 }
 #fotter .container .column-2 h4 span {
   display: block;
@@ -514,6 +960,23 @@ p {
 }
 #fotter .container.copyright {
   min-height: 100px;
+  border: none;
+}
+@media (max-width: 480px) {
+  #fotter .container.copyright {
+    min-height: 60px;
+    padding-bottom: 40px;
+  }
+}
+@media (max-width: 480px) {
+  #fotter .container.copyright .column-1 {
+    order: 2;
+  }
+}
+@media (max-width: 480px) {
+  #fotter .container.copyright .column-2 {
+    order: 1;
+  }
 }
 #fotter .container.copyright .column-2 ul.fotter-menu {
   display: flex;
@@ -522,8 +985,41 @@ p {
 #fotter .container.copyright .column-2 ul.fotter-menu li {
   margin-left: 30px;
 }
+@media (max-width: 767px) {
+  #fotter .container.copyright .column-2 ul.fotter-menu li {
+    margin-left: 15px;
+  }
+}
 #fotter .container.copyright .column-2 ul.fotter-menu li a {
   font-size: 24px;
   font-weight: bold;
   color: #5a5a5a;
+}
+@media (max-width: 767px) {
+  #fotter .container.copyright .column-2 ul.fotter-menu li a {
+    font-size: 18px;
+  }
+}
+#fotter #totop {
+  width: 40px;
+  height: 40px;
+  background: #777;
+  transform: rotate(45deg);
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: -20px;
+  margin: auto;
+}
+#fotter #totop span {
+  transform: rotate(-45deg);
+  position: absolute;
+  text-align: center;
+  line-height: 23px;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  color: #fff;
+  font-size: 33px;
 }
