--- a/html/recstudio-ro/less/custom.less
+++ b/html/recstudio-ro/less/custom.less
@@ -14,6 +14,7 @@ ul {
 
 .container {
     margin: 0 auto;
+    padding: 0 15px;
     max-width: 1200px;
 }
 
@@ -35,8 +36,19 @@ h4 {
 a {
     text-decoration: none;
     color: rgb(68, 68, 68);
+    transition: all ease 0.4s;
     &:hover {
         color: #ff3a47;
+        transition: all ease 0.4s;
+    }
+}
+
+.text-block {
+    @media (max-width: 480px) {
+        text-align: center;
+        br {
+            display: none;
+        }
     }
 }
 
@@ -47,6 +59,9 @@ a {
     color: #414141;
     position: relative;
     display: inline-block;
+    @media (max-width: 480px) {
+        font-size: 40px;
+    }
     &:after {
         content: " ";
         width: 10px;
@@ -57,6 +72,9 @@ a {
         display: block;
         top: 35px;
         right: -15px;
+        @media (max-width: 480px) {
+            top: 24px;
+        }
     }
 }
 
