--- a/html/recstudio-ro/less/fotter.less
+++ b/html/recstudio-ro/less/fotter.less
@@ -1,4 +1,5 @@
 #fotter {
+    position: relative;
     .container {
         display: flex;
         justify-content: space-between;
@@ -6,6 +7,11 @@
         min-height: 180px;
         border-bottom: 1px solid;
         margin: 30px auto 0;
+        @media (max-width: 480px) {
+            flex-direction: column;
+            text-align: center;
+            padding-bottom: 30px;
+        }
         .column-1 {
             h4 {
                 font-size: 24px;
@@ -21,6 +27,7 @@
         .column-2 {
             h4 {
                 text-align: right;
+                line-height: 40px;
                 span {
                     display: block;
                     font-size: 44px;
@@ -30,20 +37,61 @@
     }
     .container.copyright {
         min-height: 100px;
-        .column-1 {}
+        border: none;
+        @media (max-width: 480px) {
+            min-height: 60px;
+            padding-bottom: 40px;
+        }
+        .column-1 {
+            @media (max-width: 480px) {
+                order: 2;
+            }
+        }
         .column-2 {
+            @media (max-width: 480px) {
+                order: 1;
+            }
             ul.fotter-menu {
                 display: flex;
                 list-style-type: none;
                 li {
                     margin-left: 30px;
+                    @media (max-width: 767px) {
+                        margin-left: 15px;
+                    }
                     a {
                         font-size: 24px;
                         font-weight: bold;
                         color: rgb(90, 90, 90);
+                        @media (max-width: 767px) {
+                            font-size: 18px;
+                        }
                     }
                 }
             }
+        }
+    }
+    #totop {
+        width: 40px;
+        height: 40px;
+        background: #777;
+        transform: rotate(45deg);
+        position: fixed;
+        left: 0;
+        right: 0;
+        bottom: -20px;
+        margin: auto;
+        span {
+            transform: rotate(-45deg);
+            position: absolute;
+            text-align: center;
+            line-height: 23px;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            color: #fff;
+            font-size: 33px;
         }
     }
 }
