--- a/html/recstudio-ro/less/menu.less
+++ b/html/recstudio-ro/less/menu.less
@@ -1,77 +1,226 @@
-#menu-wrapper {
-    background: rgba(0, 0, 0, 0.2);
-    position: fixed;
-    height: 60px;
-    width: 70%;
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-    left: 0;
-    right: 0;
-    top: 30px;
-    z-index: 3;
-    .container {
-        #menu {
-            display: flex;
-            list-style: none;
-            justify-content: center;
-            align-items: center;
-            li {
-                padding: 10px 30px;
-                a {
-                    color: #ffffff;
-                    text-decoration: none;
-                    font-size: 18px;
-                    text-transform: normal;
-                    &:hover {
-                        color: #ff3a47;
+                .menu-wrapper {
+                    background: transparent;
+                    width: 100%;
+                    min-height: 50px;
+                    margin: auto;
+                    position: fixed;
+                    padding: 50px 0;
+                    z-index: 999;
+                    transition: all ease 0.5s;
+                    @media (max-width: 1440px) {
+                        width: 100%;
+                    }
+                    @media (max-width: 767px) {
+                        padding: 0;
+                        min-height: 65px;
+                    }
+                    .container {
+                        .logotype {
+                            display: none;
+                            @media (max-width: 767px) {
+                                display: block;
+                            }
+                            img.logo {
+                                width: 120px;
+                                padding-top: 11px;
+                            }
+                        }
+                        #menu-btn {
+                            position: absolute;
+                            right: 15px;
+                            top: 30px;
+                            background: transparent;
+                            border: none;
+                            outline: none;
+                            outline-offset: 0;
+                            transition-duration: 0.2s;
+                            @media (max-width: 767px) {
+                                top: 15px;
+                            }
+                            cursor: pointer;
+                            span.op {
+                                width: 30px;
+                                height: 4px;
+                                background: #fff;
+                                display: block;
+                                margin: 5px;
+                            }
+                            span.cl-1,
+                            span.cl-2 {
+                                width: 30px;
+                                height: 4px;
+                                background: #fff;
+                                display: none;
+                                margin: 5px;
+                            }
+                            @media (min-width: 767px) {
+                                display: block;
+                            }
+                            @media (min-width: 768px) {
+                                display: none;
+                            }
+                            &.open {
+                                span.op {
+                                    display: none;
+                                }
+                                span.cl-1 {
+                                    display: block;
+                                    transform: rotate(45deg);
+                                    transition: all ease 0.5s;
+                                    position: relative;
+                                    top: 9px;
+                                    right: 0px;
+                                }
+                                span.cl-2 {
+                                    display: block;
+                                    transform: rotate(-45deg);
+                                    transition: all ease 0.5s;
+                                    position: relative;
+                                    top: 0;
+                                    right: 0;
+                                }
+                            }
+                            &:focus,
+                            &:hover {
+                                background: transparent;
+                                outline: none;
+                                outline-offset: 0;
+                            }
+                        }
+                        nav.dropdown {
+                            background: #1f1f1f;
+                            width: 100%;
+                            margin: 0;
+                            position: absolute;
+                            margin: -15px;
+                            z-index: -1;
+                            @media (min-width: 768px) {
+                                background: transparent;
+                                position: relative;
+                                width: auto;
+                                margin: 0;
+                                z-index: 0;
+                            }
+                            #menu {
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                                margin: auto;
+                                width: 90%; // background: rgba(0, 0, 0, 0.39);
+                                transition: all ease 0.4s;
+                                @media (max-width: 767px) {
+                                    display: none;
+                                }
+                                @media (min-width: 768px) {
+                                    display: block;
+                                }
+                                @media (min-width: 769px) {
+                                    display: flex;
+                                }
+                                li {
+                                    padding: 0 30px;
+                                    list-style-type: none;
+                                    line-height: 30px;
+                                    margin: 0;
+                                    transition: all ease 0.4s;
+                                    @media (max-width: 1200px) {
+                                        padding: 0 20px;
+                                    }
+                                    @media (max-width: 992px) {
+                                        padding-left: 10px;
+                                    }
+                                    a {
+                                        text-decoration: none;
+                                        letter-spacing: 0.5px;
+                                        color: #fff;
+                                        font-weight: 200;
+                                        @media (max-width: 767px) {
+                                            font-size: 33px;
+                                        }
+                                        &:hover {
+                                            color: #ff3a47;
+                                        }
+                                    }
+                                    &::after {
+                                        content: " ";
+                                        width: 20px;
+                                        height: 1px;
+                                        display: inline-block;
+                                        color: #ffffff57;
+                                        position: relative;
+                                        background: #ffffff;
+                                        top: -4px;
+                                        left: 25px;
+                                        transition: all ease 0.4s;
+                                        @media (max-width: 1023px) {
+                                            display: none;
+                                        }
+                                    }
+                                }
+                                &.open {
+                                    @media (max-width: 767px) {
+                                        display: block;
+                                        margin: 35% auto 0;
+                                        text-align: center;
+                                        height: 100vh;
+                                        @media (max-width: 767px) {
+                                            margin: 25% auto 0;
+                                        }
+                                        li {
+                                            padding: 5px 0;
+                                            @media (max-width: 767px) {
+                                                padding: 0;
+                                                line-height: 40px;
+                                            }
+                                        }
+                                    }
+                                }
+                                img.logo {
+                                    width: 120px;
+                                    margin: 10px 0 0;
+                                    @media (max-width: 767px) {
+                                        display: none;
+                                    }
+                                }
+                                li.no-line {
+                                    @media (max-width: 767px) {
+                                        padding: 0;
+                                    }
+                                    &::after {
+                                        content: " ";
+                                        display: none;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                    &.fixed {
+                        background: #1f1f1f;
+                        padding: 5px 0;
+                        width: 100%;
+                        transition: all ease 0.4s;
+                        @media (max-width: 767px) {
+                            padding: 0;
+                        }
+                        #menu {
+                            background: transparent !important;
+                            height: 50px;
+                            transition: all ease 0.4s;
+                            li.no-line {
+                                &::after {
+                                    content: " ";
+                                    display: none;
+                                }
+                            }
+                        }
                     }
                 }
-                .logo-center {
-                    width: 120px;
-                    margin: auto;
-                }
-                &.main:after {
-                    content: " ";
-                    background: #404040;
-                    width: 15px;
-                    height: 1px;
+
+                .slideshow-pattern {
+                    background: url("/images/slideshow/video/pattern_260.png") repeat;
+                    position: absolute;
+                    z-index: 999999 !important;
                     display: block;
-                    right: -70px;
-                    position: relative;
-                    top: -11px;
+                    width: 100%;
+                    height: 100%;
                 }
-                &.about:after {
-                    content: " ";
-                    background: #404040;
-                    width: 15px;
-                    height: 1px;
-                    display: block;
-                    right: -53px;
-                    position: relative;
-                    top: -11px;
-                }
-                &.photo:after {
-                    content: " ";
-                    background: #404040;
-                    width: 15px;
-                    height: 1px;
-                    display: block;
-                    right: -53px;
-                    position: relative;
-                    top: -11px;
-                }
-                &.video:after {
-                    content: " ";
-                    background: #404040;
-                    width: 15px;
-                    height: 1px;
-                    display: block;
-                    right: -57px;
-                    position: relative;
-                    top: -11px;
-                }
-            }
-        }
-    }
-}
