--- a/html/recstudio-ro/less/photo.less
+++ b/html/recstudio-ro/less/photo.less
@@ -5,4 +5,28 @@
     p {
         line-height: 28px;
     }
+    .gallery-wrap {
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 100%;
+        a {
+            margin: 5px;
+            flex-basis: 24%;
+            @media (max-width: 992px) {
+                flex-basis: 48%;
+            }
+            @media (max-width: 480px) {
+                flex-basis: 100%;
+                margin: 5px 15px;
+            }
+            img {
+                width: 100%;
+                &:hover {
+                    box-shadow: 0 0 3px 3px rgb(151, 151, 151);
+                }
+            }
+        }
+    }
 }
