--- a/html/recstudio-ro/less/services.less
+++ b/html/recstudio-ro/less/services.less
@@ -1,5 +1,8 @@
 #services {
     display: flex;
+    @media (max-width: 992px) {
+        flex-direction: column;
+    }
     .column-1 {
         display: flex;
         flex-direction: row;
@@ -13,10 +16,21 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            flex-basis: 39%;
-            min-height: 300px;
+            flex-basis: 36%;
+            min-height: 374px;
             text-align: center;
             padding: 40px;
+            @media (max-width: 1200px) {
+                padding: 15px 40px;
+            }
+            @media (max-width: 767px) {
+                flex-basis: 70%;
+            }
+            @media (max-width: 480px) {
+                flex-basis: 100%;
+                padding: 15px 20px;
+                min-height: 280px;
+            }
         }
         .box1 {
             border-bottom: 1px solid #eee;
@@ -24,11 +38,21 @@
         .box2 {
             border-left: 1px solid #eee;
             border-bottom: 1px solid #eee;
+            @media (max-width: 767px) {
+                border-left: none;
+            }
         }
         .box3 {
             border-right: 1px solid #eee;
+            @media (max-width: 767px) {
+                border-right: none;
+            }
         }
-        .box4 {}
+        .box4 {
+            @media (max-width: 767px) {
+                border-top: 1px solid #eee;
+            }
+        }
         h3 a {
             font-size: 24px;
             margin: 20px 0 0px;
@@ -51,6 +75,9 @@
         align-items: center;
         flex: 1;
         flex-basis: 50%;
+        @media (max-width: 1200px) {
+            flex-basis: 30%;
+        }
         .service-box {
             border: 4px solid #fff;
             width: 360px;
@@ -62,6 +89,10 @@
             text-align: center;
             color: #fff;
             padding: 40px;
+            @media (max-width: 1200px) {
+                width: 70%;
+                margin: 40px 0 0;
+            }
             .main-title {
                 color: #fff;
                 position: relative;
@@ -77,6 +108,9 @@
             text-align: right;
             color: #fff;
             position: relative;
+            @media (max-width: 1200px) {
+                width: auto;
+            }
             &:after {
                 content: url(../images/icon-readmore-white.png);
                 border-radius: 50%;
