--- a/html/recstudio-ro/less/team.less
+++ b/html/recstudio-ro/less/team.less
@@ -1,6 +1,15 @@
 #team {
     padding-bottom: 100px;
+    @media (max-width: 1200px) {
+        padding-bottom: 50px;
+    }
     .container {
+        .text-block {
+            width: 767px;
+            @media (max-width: 767px) {
+                width: auto;
+            }
+        }
         .vert-divider {
             width: 1px;
             height: 100px;
@@ -10,14 +19,26 @@
         }
         .team-block {
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
             min-height: 460px;
-            margin: 0 -20px;
+            margin: 20px -10px 0;
+            @media (max-width: 992px) {
+                flex-wrap: wrap;
+            }
+            @media (max-width: 480px) {
+                flex-direction: column;
+            }
             .team-box {
                 flex-basis: 25%;
+                @media (max-width: 992px) {
+                    flex-basis: 50%;
+                }
+                @media (max-width: 480px) {
+                    flex-basis: 100%;
+                }
                 .box {
-                    margin: 20px;
+                    margin: 10px;
                     position: relative;
                     transition: all ease 0.5s;
                     cursor: pointer;
@@ -27,8 +48,6 @@
                     .info {
                         transition: all ease 0.5s;
                         display: none;
-                        h4 {}
-                        p {}
                     }
                 }
                 &:hover {
@@ -47,7 +66,6 @@
                             padding: 0;
                             margin: 0;
                         }
-                        p {}
                     }
                 }
             }
