add php layouts

--- a/bootstrap/public/scss/main.scss
+++ b/bootstrap/public/scss/main.scss
@@ -1,4 +1,7 @@
-@import "variables";
-@import "header";
+@import "base/variables";
+@import "base/fonts";
+@import "base/rules";
+
+@import "layout/header";
 @import "home";
-@import "footer";
+@import "layout/footer";
